# cuda_ray_tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  create_scene_base.sh
output_samples/: 1sphere-1plan.ppm  raybox.ppm
output_samples/frames/: 1sphere.ppm  1triangle.ppm  big.ppm  multiple-spheres.ppm
scenes/: 1plan.scene  1sphere-1plan.scene  1triangle.scene  big_video.scene  sample.scene  sample_video.scene  script.sh  unit_raybox.scene
scenes/frames/: 1plan.scene  1raybox.scene  1sphere.scene  big.scene  multiple-spheres.scene
scenes/tools/: convert-ppm.sh  ppm_to_png.sh  ppm_to_video.sh
scenes/video/: big_video.scene  mirror.scene  wall_front.scene  wall_raybox.scene
src/: kernel.cu  main.cc  main.cu
src/color/: color.cuh  texture_material.cuh  uniform_texture.cuh
src/cuda_tools/: cuda_error.cuh  optional.cuh  optional.hh  vector.cuh  vector.cuhxx  vector.hh
src/parse/: parser.cc  parser.cu  parser.cuh
src/rendering/: engine.cu  engine.cuh  image.cuh  image.cuhxx  save_worker.cuh  video_engine.cu  video_engine.cuh  worker.cuh
src/scene/: camera.cu  camera.cuh  light.cuh  object.cuh  plan.cu  plan.cuh  point_light.cuh  raybox.cu  raybox.cuh  scene.cu  scene.cuh  sphere.cu  sphere.cuh  triangle.cu  triangle.cuh
src/space/: intersection_info.cuh  ray.cuh  vector.cuh  vector.cuhxx
tests/: test_image.cu
tools/: ppm_to_video.sh
